--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Arnavion <arnavion@gmail.com>"]
 
 [dependencies]
 clap = "2.21.x"
-winapi = { git = "https://github.com/Arnavion/winapi-rs/", rev = "8889f4f3fbfa766bd7306c6e63d5926406948816", features = ["objbase", "oleauto", "winerror"] }
+winapi = { git = "https://github.com/retep998/winapi-rs/", rev = "96c9334207e0cf0b8da535455e29eda46d675bbb", features = ["objbase", "oleauto", "winerror"] }
 
 [profile.dev]
 panic = "abort"
