Convert to a lib crate for ease of use in build scripts.
- The test crate's build script uses the lib instead of shelling out to `cargo run`.

- The original bin is now a sub-crate `wasm-tlb-bindgen-bin` and uses this lib.

--- a/test-msxml/Cargo.toml
+++ b/test-msxml/Cargo.toml
@@ -6,3 +6,6 @@ publish = false
 
 [dependencies]
 winapi = { version = "0.3.x", features = ["objbase", "oleauto", "winerror"] }
+
+[build-dependencies]
+winapi-tlb-bindgen = { path = "../" }
