Update all the things.
- Edition 2018.
- Warnings and clippy lints.
- Drop (derive-)error-chain.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,7 @@
 name = "winapi-tlb-bindgen"
 version = "0.1.0"
 authors = ["Arnavion <arnavion@gmail.com>"]
+edition = "2018"
 
 [dependencies]
-derive-error-chain = "0.11.x"
-error-chain = "0.11.x"
 winapi = { version = "0.3.x", features = ["objbase", "oleauto", "winerror"] }
