--- a/test-wmi/Cargo.toml
+++ b/test-wmi/Cargo.toml
@@ -2,6 +2,7 @@
 name = "test-wmi"
 version = "0.1.0"
 authors = ["Arnavion <arnavion@gmail.com>"]
+edition = "2018"
 publish = false
 
 [dependencies]
