--- a/winapi-tlb-bindgen-bin/Cargo.toml
+++ b/winapi-tlb-bindgen-bin/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "winapi-tlb-bindgen-bin"
 version = "0.1.0"
-authors = ["Arnavion <arnavion@gmail.com>"]
+license = "Apache-2.0"
+authors = ["Arnavion <me@arnavion.dev>"]
 edition = "2018"
 
 [dependencies]
